# ansible-collection-openbsd

./: .ansible-lint  .build.yml  .editorconfig  .flake8  .gitignore  .prettierrc.yaml  .prettierrc.yml  .yamllint  CNAME  LICENSE  LICENSE.md  README.md  Vagrantfile  ansible.cfg  deploy.yml  galaxy.yml  install.conf  inventory.sample.yml  inventory.yml  main.yml  notes.md  openbsd.pkr.hcl  poetry.toml  pyproject.toml  python-requirements.txt  requirements-dev.txt  requirements-devel.txt  requirements-lint.txt  requirements.python.txt  requirements.txt  requirements.yml  sample.inventory.yaml  sample.inventory.yml  setup.cfg  setup.py  site-check.yml  site-dns.yml  site-mail.yml  site-mirror.yml  site-multi.yml  (+9 more)
.builds/: bandit.yml  flake8.yml  mypy.yml  openbsd.yml
.github/workflows/: galaxy.yaml  galaxy.yml  lint.yaml  lint.yml
docs/: infra.md  modules.md  playbooks.md  roles.md  testing.md
group_vars/: all.yml
handlers/: main.yml
inventory/: localhost.yaml  localhost.yml  vagrant.yml
meta/: runtime.yaml  runtime.yml
openbsd_run/: __init__.py  ansible.py  cli.py  config.py  log.py  main.py
openbsd_run/cmd/: __init__.py  pkg.py  pkg_add.py  pkg_delete.py  syspatch.py  sysupgrade.py
openbsd_run/playbook/: README.md  __init__.py  ansible.cfg  inventory.yml  requirements.yml  site-acme.yml  site-check.yaml  site-check.yml  site-core.yml  site-dns.yaml  site-dns.yml  site-firewall.yml  site-mail.yaml  site-mail.yml  site-mirror.yml  site-monitor.yml  site-nsd.yml  site-ntpd.yml  site-packages.yml  site-patch.yml  site-pkg.yaml  site-pkg.yml  site-ports.yml  site-pxeboot.yml  site-syspatch.yaml  site-syspatch.yml  site-sysupgrade.yaml  site-sysupgrade.yml  site-update.yml  site-upgrade.yml  site-vmd.yml  site-vmm.yml  site-web.yml  site.yml
openbsd_run/playbook/group_vars/: all.yml
openbsd_run/playbook/modules/: openrsync.py  pfctl.py  pkg.py  signify.py  syspatch.py  sysupgrade.py  vmctl.py
openbsd_run/playbook/roles/openbsd.acme/: README.md
openbsd_run/playbook/roles/openbsd.doas/: README.md
openbsd_run/playbook/roles/openbsd.httpd/: README.md
openbsd_run/playbook/roles/openbsd.mail/: README.md
openbsd_run/playbook/roles/openbsd.monitor/: README.md
openbsd_run/playbook/roles/openbsd.pf/: README.md
openbsd_run/playbook/roles/openbsd.prometheus/: README.md
openbsd_run/playbook/roles/openbsd.relayd/: .yamllint  README.md
openbsd_run/playbook/roles/openbsd.syspatch/: README.md
openbsd_run/utils/: __init__.py  config.py  log.py
playbooks/: mail.yaml  mail.yml  pkg.yaml  pkg.yml  python.yaml  python.yml  syspatch.yaml  sysupgrade.yaml  sysupgrade.yml  update.yaml
plugins/modules/: acme_client.py  pkg.py  rcctl.py  sysmerge.py  syspatch.py  sysupgrade.py  vmctl.py
requirements/: ansible-lint.txt  ansible.txt  bandit.txt  devel.txt  flake8.txt  mypy.txt  tox.txt
roles/acme/defaults/: main.yaml
roles/acme/handlers/: main.yaml
roles/acme/tasks/: main.yaml
roles/mail/: README.md
roles/mail/defaults/: main.yaml  main.yml
roles/mail/handlers/: main.yaml  main.yml
roles/mail/tasks/: main.yaml  main.yml
roles/mirror/: README.md
roles/monitor/defaults/: main.yml
roles/monitor/tasks/: client.yml  main.yml  server.yml
roles/nsd/: README.md
roles/nsd/defaults/: main.yml
roles/nsd/tasks/: main.yml
roles/ntpd/handlers/: main.yml
roles/ntpd/tasks/: main.yml
roles/openbsd.compute/handlers/: main.yml
roles/openbsd.compute/tasks/: main.yml
roles/openbsd.compute/vars/: main.yml
roles/openbsd.doas/defaults/: main.yml
roles/openbsd.doas/tasks/: main.yml
roles/openbsd.grafana/: README.md
roles/openbsd.grafana/defaults/: main.yml
roles/openbsd.grafana/handlers/: main.yml
roles/openbsd.grafana/tasks/: main.yml
roles/openbsd.grafana/vars/: main.yml
roles/openbsd.httpd/handlers/: main.yml
roles/openbsd.httpd/tasks/: main.yml
roles/openbsd.httpd/vars/: main.yml
roles/openbsd.mail/: README.md
roles/openbsd.mail/defaults/: main.yml
roles/openbsd.mail/handlers/: main.yml
roles/openbsd.mail/tasks/: main.yml
roles/openbsd.mail/vars/: main.yml
roles/openbsd.mirror/tasks/: main.yml
roles/openbsd.monitor/defaults/: main.yml
roles/openbsd.nsd/: README.md
roles/openbsd.nsd/defaults/: main.yml
roles/openbsd.nsd/handlers/: main.yml
roles/openbsd.nsd/tasks/: main.yml
roles/openbsd.nsd/tests/: test.yml
roles/openbsd.nsd/vars/: main.yml
roles/openbsd.ntpd/: README.md
roles/openbsd.ntpd/handlers/: main.yml
roles/openbsd.ntpd/tasks/: main.yml
roles/openbsd.pf/defaults/: main.yml
roles/openbsd.pf/handlers/: main.yml
roles/openbsd.pf/tasks/: main.yml
roles/openbsd.prometheus/handlers/: main.yml
roles/openbsd.prometheus/tasks/: main.yml
roles/openbsd.prometheus/vars/: main.yml
roles/openbsd.relayd/: README.md
roles/openbsd.relayd/defaults/: main.yml
roles/openbsd.relayd/vars/: main.yml
roles/openbsd.router/: README.md
roles/openbsd.router/defaults/: main.yml
roles/openbsd.router/handlers/: main.yml
roles/openbsd.router/tasks/: main.yml
roles/openbsd.router/vars/: main.yml
roles/openbsd.switch/: README.md
roles/openbsd.switch/defaults/: main.yml
roles/openbsd.switch/handlers/: main.yml
roles/openbsd.switch/tasks/: main.yml
roles/openbsd.switch/vars/: main.yml
roles/openbsd.syspatch/: README.md
roles/openbsd.syspatch/defaults/: main.yml
roles/openbsd.syspatch/tasks/: main.yml  syspatch.yml
roles/openbsd.sysupgrade/defaults/: main.yml
roles/openbsd.sysupgrade/tasks/: main.yml  sysupgrade.yml
roles/openbsd.unwind/tasks/: main.yml
roles/openbsd.update/handlers/: main.yml
roles/openbsd.update/tasks/: main.yml
roles/openbsd.vmm/defaults/: main.yml
roles/openbsd.vmm/handlers/: main.yml
roles/openbsd.vmm/tasks/: main.yml
roles/openbsd.vmm/vars/: main.yml
roles/openbsd.www/tasks/: main.yml
roles/openbsd.www/templates/: index.html.j2
roles/openbsd.www/vars/: main.yml
roles/unwind/: README.md
roles/unwind/tasks/: main.yml
roles/vmm/: README.md
roles/vmm/defaults/: main.yml
roles/vmm/handlers/: main.yml
roles/vmm/tasks/: main.yml
(+88 files in other folders)
