# SPDX-License-Identifier: ISC
#
# Copyright (c) 2022 Johnathan C. Maudlin <jcmdln@gmail.com>

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.2"]

[tool.poetry]
authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
description = ""
name = "ansible-collection-openbsd"
readme = "README.md"
repository = "https://github.com/jcmdln/ansible-collection-openbsd"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.9"
# packages
ansible-core = "^2"
netaddr = "^0"

[tool.poetry.group.ansible-lint.dependencies]
ansible-lint = "^6"

[tool.poetry.group.mypy.dependencies]
mypy = "^1"

[tool.poetry.group.pip-audit]
optional = true
[tool.poetry.group.pip-audit.dependencies]
pip-audit = "^2"

[tool.poetry.group.ruff.dependencies]
black = "^23"
ruff = "^0"

[tool.poetry.group.tox.dependencies]
tox = "^4"

#
# Tools
#

[tool.black]
line-length = 100

[tool.mypy]
exclude = [".git", ".tox", ".venv"]
ignore_missing_imports = true
show_error_context = true
strict = true
strict_optional = true
# Disable specific strict checks
disallow_any_generics = false

[tool.ruff]
ignore = [
    "D",       # Ignore all documentation lints
    "ANN101",  # Missing type annotation for `self` in method
    "COM812",  # Trailing comma missing
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
]
line-length = 100
select = ["ALL"]
